# customers

./: .gitignore  README.md  package-lock.json  package.json  serverless.yml
functions/: Cargo.toml
functions/src/: lib.rs
sls/: env.yml  iam.yml  resources.yml  settings.yml
sls/cloudformation/: dynamodb.yml
sls/plugins/: rust.yml
