[package]
name = "functions"
version = "0.1.0"
authors = ["Kanji Tanaka <ktanaka@ichain.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "create"
path = "src/bin/create.rs"

[dependencies]
aws_lambda_events = "0.4"
futures = "0.3"
lambda_runtime = "0.3"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.5", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", default-features = false, features = ["env-filter", "fmt", "json"] }
